# MathLLM

./: .gitignore  README.md  idea.md  pyproject.toml  requirements.txt
configs/: 360m.yaml  360m_layer20_only.yaml  360m_layer31_only.yaml  360m_rank2.yaml  360m_rank8.yaml  debug.yaml  default.yaml  mps.yaml  poc.yaml  toy_pretrain_full.yaml  toy_pretrain_mac.yaml  toy_pretrain_smoke.yaml
mathllm/: __init__.py  config.py
mathllm/arb/: __init__.py  arb_module.py  constants.py  stage1_extract.py  stage2_encode.py  stage3_compute.py  stage4_inject.py  ste.py
mathllm/data/: __init__.py  dataset.py  generator.py  negative_examples.py  templates.py
mathllm/evaluation/: evaluator.py  zero_forgetting.py
mathllm/model/: lora.py  (+3 more)
scripts/: benchmark_runtime.py  benchmark_zero_forgetting.py  evaluate.py  evaluate_component_ablation.py  evaluate_containment_probe.py  evaluate_domain_slices.py  export_checkpoint.py  generate_data.py  generate_retention_data.py  infer.py  infer_checkpoint.py  prepare_toy_pretraining_data.py  run_toy_pretraining.py  train.py
tests/: test_arb_module.py  test_benchmark_runtime.py  test_computation_correctness.py  test_constants.py  test_data_generator.py  test_dataset.py  test_evaluate_script.py  test_evaluator.py  test_export_checkpoint.py  test_inactive_fast_path.py  test_infer_checkpoint.py  test_integration.py  test_lora.py  test_model_export.py  test_mps_compat.py  test_stages.py  test_ste.py  test_toy_pretraining.py  test_trainer_checkpointing.py  test_zero_forgetting.py  test_zero_forgetting_script.py
trained_model_360m/: config.yaml
(+8 files in other folders)
