[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathllm"
version = "0.1.0"
description = "Arithmetic Residual Blocks: Exact Computation Native to the Transformer Forward Pass"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "datasets>=2.14",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]
logging = [
    "wandb>=0.15",
]

[tool.setuptools.packages.find]
include = ["mathllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
